# try-webapp-actors

./: Cargo.toml  README.md  index.html  run.py
.devcontainer/: Dockerfile  devcontainer.json
actor/: Cargo.toml
actor/src/: main.rs  mandelbrot.rs
main/: Cargo.toml
main/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
