[package]
name = "shared"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["OffscreenCanvas"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-rpc = { workspace = true }
serde = { workspace = true }

